[gd_scene load_steps=11 format=2]

[ext_resource path="res://font/ADELB___.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://font/CWEBL.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://style/selected_menu.tres" type="StyleBox" id=3]
[ext_resource path="res://script/menu/menu.gd" type="Script" id=4]
[ext_resource path="res://style/CustomGradientEffect.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 36
outline_size = 2
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="RichTextEffect" id=2]
resource_name = "RichTextGradient"
script = ExtResource( 5 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=4]
size = 23
use_mipmaps = true
extra_spacing_top = -3
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=5]

[node name="Start" type="Node"]

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="ColorRect" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="RichTextLabel" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.186111
anchor_right = 0.5
anchor_bottom = 0.186111
margin_left = -320.0
margin_right = 320.0
margin_bottom = 41.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][wave amp=10 freq=2][gradient]Hell Descent"
text = "Hell Descent"
scroll_active = false
custom_effects = [ SubResource( 2 ) ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="VBoxContainer" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.619444
anchor_right = 0.5
anchor_bottom = 0.619444
margin_left = -58.0
margin_top = -52.0
margin_right = 58.0
margin_bottom = 54.0
rect_scale = Vector2( 0.993874, 1 )
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New" type="Button" parent="Menu/Options"]
margin_top = 21.0
margin_right = 116.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 18 )
mouse_default_cursor_shape = 2
custom_styles/hover = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
keep_pressed_outside = true
text = "New Game"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Online" type="Button" parent="Menu/Options"]
margin_top = 42.0
margin_right = 116.0
margin_bottom = 63.0
rect_min_size = Vector2( 0, 18 )
mouse_default_cursor_shape = 2
custom_styles/hover = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Play Online"
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="Menu/Options"]
margin_top = 63.0
margin_right = 116.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 18 )
focus_neighbour_bottom = NodePath("../Create")
focus_next = NodePath("../Create")
mouse_default_cursor_shape = 2
custom_styles/hover = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Settings"
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="Menu/Options/New" to="Menu" method="_on_New_button_up"]
[connection signal="focus_entered" from="Menu/Options/New" to="Menu" method="_on_New_focus_entered"]
[connection signal="focus_exited" from="Menu/Options/New" to="Menu" method="_on_New_focus_exited"]
[connection signal="mouse_entered" from="Menu/Options/New" to="Menu" method="_on_New_mouse_entered"]
[connection signal="button_up" from="Menu/Options/Online" to="Menu" method="_on_Online_button_up"]
[connection signal="focus_entered" from="Menu/Options/Online" to="Menu" method="_on_Online_focus_entered"]
[connection signal="focus_exited" from="Menu/Options/Online" to="Menu" method="_on_Online_focus_exited"]
[connection signal="mouse_entered" from="Menu/Options/Online" to="Menu" method="_on_Online_mouse_entered"]
[connection signal="button_up" from="Menu/Options/Settings" to="Menu" method="_on_Settings_button_up"]
[connection signal="focus_entered" from="Menu/Options/Settings" to="Menu" method="_on_Settings_focus_entered"]
[connection signal="focus_exited" from="Menu/Options/Settings" to="Menu" method="_on_Settings_focus_exited"]
[connection signal="mouse_entered" from="Menu/Options/Settings" to="Menu" method="_on_Settings_mouse_entered"]
